# goz_scoring

./: Cargo.toml  README.md  config.toml
src/: application.rs  commands.rs  config.rs  lib.rs
src/commands/: start.rs  version.rs
tests/: acceptance.rs
