[package]
name = "goz_scoring"
authors = []
version = "0.1.0"
edition = "2018"

[dependencies]
gumdrop = "0.7"
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"
sagan ={git ="https://github.com/iqlusioninc/sagan.git", branch="zaki-sagan-collect-events"}
relayer-modules = { git = "https://github.com/iqlusioninc/ibc-rs.git", branch = "poldsam-zaki-ibc-events" }
serde_json = "1.0.53"
subtle-encoding = "0.5.1"

[dependencies.abscissa_core]
version = "0.5.2"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.5.2", features = ["testing"] }
once_cell = "1.2"

